Fix alignment

--- a/src/css/blog.scss
+++ b/src/css/blog.scss
@@ -31,6 +31,10 @@
   a {
     padding: 0.5rem;
   }
+
+  img {
+    vertical-align: text-bottom;
+  }
 }
 
 .share-btns-side {
